# simplecore

./: LICENSE  __init__.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
pysimplecore.egg-info/: PKG-INFO  SOURCES.txt
simplecore.egg-info/: PKG-INFO  SOURCES.txt
src/pysimplecore/: README.md  __init__.py  cache.py  decorators.py  logger.py  processor.py  pyproject.toml  serialize.py  setup.py  utils.py  validate.py
src/pysimplecore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py  test_basic.py  test_import.py
