[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysimplecore"
version = "0.0.7"
description = "Легковесная утилитарная библиотека для Python"
readme = "README.md"
authors = [
    {name = "mreliseyyt", email = "mail@mreliseyyt.ru"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/mreliseyyt/pysimplecore"